# cmake-cookbook

./: README.rst  contents.rst
executables/: hello-world2.c  hello.c  hello.rst  hello2.h
installing/: CMakeLists.txt  hello.h  hello.rst
libraries/: CMakeLists.txt  hello.c  hello.rst
simple/: CMakeLists.txt  hello.rst  hello2.c
